--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,10 +49,7 @@ html { height: 98%; }
     padding-top: 10px;
     padding-bottom: 3px;
     display: block;
-    position: sticky;
     top: 0;
-    background-color: seagreen;
-    border-bottom: 2px solid;
     margin-left: -10px;
     margin-right: -10px;
 }
@@ -66,6 +63,77 @@ html { height: 98%; }
     cursor: pointer;
 }
 
+.resume {
+    border: none;
+    width: 800px;
+    height: 1000px;
+}
+
+
+/* Gallary */
+
+.gallary {
+    display: inline;
+    width: 100%;
+}
+
+.flip-card img{
+    height: 100%;
+    border-radius: 10px;
+}
+
+.flip-card {
+    background-color: transparent;
+    height: 300px;
+    width: 225px;
+    /* border: 1px solid #f1f1f1; */
+    perspective: 1000px; /* Remove this if you don't want the 3D effect */
+    margin: 10px;
+  }
+  
+  /* This container is needed to position the front and back side */
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  /* Do an horizontal flip when you move the mouse over the flip box container */
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  /* Position the front and back side */
+  .flip-card-front, .flip-card-back {
+    border-radius: 10px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden; /* Safari */
+    backface-visibility: hidden;
+    box-shadow: 3px 3px 10px black;
+  }
+  
+  /* Style the front side (fallback if image is missing) */
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  /* Style the back side */
+  .flip-card-back {
+    border-radius: 10px;
+    text-align: center;
+    font-family:'Courier New', Courier, monospace;
+    background-color: purple;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+/* DarkMode */
 .darkMode {
     background-color: rgb(69, 68, 68);
     color: white;
