--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,6 +18,13 @@ header {
     text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.616);
 }
 
+.card img {
+    height: 300px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px black;
+    margin: 0 auto;
+}
+
 /* Footer at the bottom of the page */
 body {
     background-color: seagreen;
