--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,24 +1,3 @@
-button {
-    background-color: green;
-    color: white;
-    border-color: darkgreen;
-    border-radius: 4px;
-    margin-left: 30px;
-    padding-left: 10px; padding-right: 10px;
-}
-
-button:hover {
-    background-color: lightgreen;
-    color: black;
-    cursor: pointer;
-}
-
-header {
-    text-align: left;
-    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.616);
-}
-
-
 .container {
     display: flex;
     width: 100%;
@@ -31,26 +10,27 @@ header {
     margin: 0 auto;
 }
 
-/* Footer at the bottom of the page */
 body {
     background-color: seagreen;
     color: rgb(1, 63, 38);
-    text-align: center;
     min-height: 100%; 
     position: relative;
 }
+
+/* Footer at the bottom of the page */
 
 html { height: 98%; }
 
 .footer {
     position: absolute;
     bottom: 0; left: 0; right: 0;
+    text-align: center;
 }
 
 
 /* Personal Styling */
-
 .card {
+    text-align: center;
     background-color: lightgreen;
     color: darkgreen;
     border: solid;
@@ -59,24 +39,61 @@ html { height: 98%; }
     box-shadow: 5px 5px 3px rgba(0, 0, 0, 0.616)
 }
 
+/* Header */
 .bar {
-    padding-top: 10px;
-    padding-bottom: 3px;
-    display: block;
-    top: 0;
-    margin-left: -10px;
-    margin-right: -10px;
+    display: grid;
+    width: 100%;
+}
+
+.title {
+    margin: 0 auto;
+    color: inherit;
+    text-decoration: inherit;
+    font-family: cursive;
+    text-shadow: 2px 2px 3px rgba(0, 0, 0, 0.616);
+    margin-bottom: 10px;
+    font-size: 120%;
 }
 
 .icon {
-    height: 55px;
-    right: 10px; top: 5px;
+    margin-left: auto;
+    height: 45px;
+    position: static;
+    top: 5px;
+    right: 5px;
     position: absolute;
+
 }
+
 .icon:hover {
     cursor: pointer;
 }
 
+.menu {
+    margin: 0 auto;
+    justify-self: center;
+    width: 100%;
+    align-self: flex-end;
+    margin-bottom: .5%;
+    justify-content: center;
+    gap: 3%;
+    display: flex;
+}
+
+.menu button {
+    background-color: green;
+    color: white;
+    border-color: darkgreen;
+    border-radius: 4px;
+}
+
+.menu button:hover {
+    background-color: lightgreen;
+    color: black;
+    cursor: pointer;
+}
+
+/* Business */
 .resume {
     border: none;
     width: 800px;
@@ -195,11 +212,11 @@ html { height: 98%; }
     color: pink;
 }
 
-.darkMode a:link{
+.darkMode .card a:link{
     color: blue;
 }
 
-.darkMode a {
+.darkMode .card a {
     color: purple;
 }
 
