--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -195,27 +195,57 @@ html { height: 98%; }
     width: 100%
   }
 
+.shelf {
+    padding-top: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    border: 5px solid;
+    border-radius: 20px;
+    border-color: rgb(61, 34, 10);
+    background-image: url(http://www.transparenttextures.com/patterns/wood-pattern.png);
+    background-color: rgb(88, 59, 26);
+    width: calc(100%-.5);
+}
+
+.shelf img {
+    max-height: 200px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px black;
+}
+
 /* Vinyls */
 .roladex {
+    border: 5px solid;
+    border-radius: 20px;
+    border-color: rgb(61, 34, 10);
+    background-image: url(http://www.transparenttextures.com/patterns/wood-pattern.png);
+    background-color: rgb(88, 59, 26);
+    width: calc(100%-.5);
     display: flex;
     overflow-x: auto;
     justify-content: center;
-    border: solid;
-    border-radius: 10px;
-    width: 100%;
-    gap: 5px;
+    gap: 20px;
 }
 
 .roladex-item {
-    width: 6px;
+    margin-right: -100px;
+    margin-left: -100px;
+    transition: transform .4s;
+    transform: scaleX(.03);
     height: 100%;
     background-color: black;
     border-radius: 5px;
 }
 
 .roladex-item:hover {
+    margin-right: 0px;
+    margin-left: 0px;
     width: auto;
-    height: 100%;
+    transition: transform .5s;
+    transform: scaleX(1);
+    /* height: 100%; */
     background-color: unset;
 }
 
@@ -226,6 +256,7 @@ html { height: 98%; }
 }
 
 .roladex-item img {
+    transition: transform 0.5s;
     transform: rotateY(90deg);
     height: 200px;
     border-radius: 10px;
