--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -42,6 +42,7 @@ html { height: 98%; }
     position: absolute;
     bottom: 0; left: 0; right: 0;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 
