--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -15,6 +15,20 @@
     --secondary-dm: plum;
 }
 
+.cookie {
+    background-color: white;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    border-radius: 10px;
+    padding-top: 1px;
+    padding-bottom: 5px;
+}
+
+.cookie button {
+    margin-inline: 5px;
+}
+
 .container {
     display: flex;
     width: 100%;
