Added a projects portion

--- a/src/styles/interests.css
+++ b/src/styles/interests.css
@@ -44,15 +44,15 @@ figure{
     height: 200px;
     background-color: inherit;
     margin-bottom: 20px;
-    max-width: 250px;
+    max-width: 100vw;
     
 }
 
 .lego-card{
     display: grid;
     grid-template:
-        "a b" 400px
-        "a c" auto/1fr 1fr
+        "a b" min-content
+        "c c" auto/1fr 1fr
 }
 
 .magic-cards {
