--- a/src/styles/interests.css
+++ b/src/styles/interests.css
@@ -45,7 +45,7 @@ figure{
     background-color: inherit;
     margin-bottom: 20px;
     max-width: 100vw;
-    
+    background-color: white;
 }
 
 .lego-card{
@@ -160,7 +160,7 @@ figure{
 }
 
 
-.shelf {
+/* .shelf {
     padding-top: 5px;
     display: flex;
     flex-wrap: wrap;
@@ -178,10 +178,33 @@ figure{
     max-height: 200px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px black;
-}
+} */
 
 /* Vinyls */
 .roladex {
+    border: 5px solid;
+    border-radius: 20px;
+    border-color: rgb(61, 34, 10);
+    background-image: url(http://www.transparenttextures.com/patterns/wood-pattern.png);
+    background-color: rgb(88, 59, 26);
+    padding: 5px 5px 0 5px;
+    display: flex;
+    overflow-x: scroll;
+    gap: 20px;
+    margin: 0 10px;
+    
+}
+
+.roladex::-webkit-scrollbar {
+    display: none;
+}
+
+.roladex-item img {
+    height: 200px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 10px var(--shadow);
+} 
+/* .roladex {
     border: 5px solid;
     border-radius: 20px;
     border-color: rgb(61, 34, 10);
@@ -210,7 +233,6 @@ figure{
     width: auto;
     transition: transform .5s;
     transform: scaleX(1);
-    /* height: 100%; */
     background-color: unset;
 }
 
@@ -226,7 +248,7 @@ figure{
     height: 200px;
     border-radius: 10px;
     box-shadow: 3px 3px 10px var(--shadow);
-}
+} */
 
 @media (max-width: 750px){
     .interest-nav{
